// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H4 component should accept additional props 1`] = `
<Text
  accessible={false}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#222222",
      },
      Object {},
    ]
  }
>
  "Rejection is an opportunity for your selection." ― Bernard Branson
</Text>
`;

exports[`the H4 component should accept and render passed in styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#222222",
      },
      Object {
        "color": "salmon",
      },
    ]
  }
>
  Salmon text
</Text>
`;

exports[`the H4 component should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#222222",
      },
      Object {},
    ]
  }
>
  Default H4 text
</Text>
`;
